--- a/Lv0/외계어사전.ipynb
+++ b/Lv0/외계어사전.ipynb
@@ -45,6 +45,96 @@
     "\n",
     "```\t[\"z\", \"d\", \"x\"], [\"def\", \"dww\", \"dzx\", \"loveaw\"]```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 두번째 풀이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(spell, dic):\n",
+    "    for word in dic: # 단어마다\n",
+    "        copy = spell # 비교리스트\n",
+    "        for w in word:\n",
+    "            if w in copy: # copy 안에 있으면\n",
+    "                copy.remove(w) # 제거\n",
+    "        if copy == []: # 모든 알파벳을 사용했으면\n",
+    "            return 1\n",
+    "    return 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 실패\n",
+    "\n",
+    "**case**\n",
+    "\n",
+    "```[\"s\", \"o\", \"m\", \"d\"], [\"moos\", \"dzx\", \"smm\", \"sunmmo\", \"som\"]```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 세번째 풀이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 집합 만들어서 비교!\n",
+    "def solution(spell, dic):\n",
+    "    for word in dic: # 단어마다\n",
+    "        if set(spell) == set(word): # 중복 제거한 집합 원소가 spell과 일치하면\n",
+    "            return 1\n",
+    "        \n",
+    "    return 2 # 반복문 빠져나왔다면 일치항목 없다는 뜻"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* string to list:\n",
+    "\n",
+    "    ```word = list(word)```\n",
+    "\n",
+    "* 그냥 바로 집합 만들기도 가능\n",
+    "\n",
+    "    ```set(word)```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 정답 풀이 참고\n",
+    "링크: https://velog.io/@sugyeonghh/%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%A8%B8%EC%8A%A4-%EC%99%B8%EA%B3%84%EC%96%B4-%EC%82%AC%EC%A0%84Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 같은 표현\n",
+    "if set(spell) == set(word):\n",
+    "    \n",
+    "if not set(spell) - set(word): # not 0 == True"
+   ]
   }
  ],
  "metadata": {
