--- a/Lv1/푸드파이터.ipynb
+++ b/Lv1/푸드파이터.ipynb
@@ -42,13 +42,31 @@
    "source": [
     "* string은 ```reverse```함수 적용 안됨\n",
     "\n",
-    "    ```str[::-1]``` "
+    "    ```str[::-1]``` \n",
+    "\n",
+    "    또는\n",
+    "\n",
+    "    ```''.join(reversed(str))```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "section4_pj",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
