--- a/Lv1/PCCE기출문제_데이터 분석.ipynb
+++ b/Lv1/PCCE기출문제_데이터 분석.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "[[3, 20300401, 10, 8], [1, 20300104, 100, 80]]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,6 @@
     "import pandas as pd\n",
     "\n",
     "def solution(data, ext, val_ext, sort_by):\n",
-    "    answer = [[]]\n",
     "    df = pd.DataFrame(data, columns=['code', 'date', 'maximum', 'remain'])\n",
     "    result = df.loc[df[ext] < val_ext].sort_values(sort_by)\n",
     "    answer = [list(result.iloc[i, :])for i in range(len(result))]\n",
@@ -314,6 +313,40 @@
    "source": [
     "## 추가 풀이\n",
     "Pandas 쓰지 않고 실행시간 줄여보자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(data, ext, val_ext, sort_by):\n",
+    "    answer = []\n",
+    "    keys = ['code', 'date', 'maximum', 'remain']\n",
+    "    k = keys.index(ext)\n",
+    "    o = keys.index(sort_by)\n",
+    "    \n",
+    "    for d in data:\n",
+    "        if d[k] < val_ext: # 조건 비교\n",
+    "            answer.append(d)\n",
+    "    # answer = sorted(answer, key=lambda x: x[o]) # 정렬\n",
+    "    answer = answer.sort(key=lambda x: x[o]) # 정렬\n",
+    "    return answer\n",
+    "solution([[1, 20300104, 100, 80], [2, 20300804, 847, 37], [3, 20300401, 10, 8]], \"date\", 20300501, \"remain\"\t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* list sorting\n",
+    "\n",
+    "    ```sorted(list, key=하나의 인자를 갖는 함수 지정)```\n",
+    "\n",
+    "    ```list.sort(key=하나의 인자를 갖는 함수 지정)```\n",
+    "\n",
+    "* 내림차순 정렬 ```reverse=True```"
    ]
   },
   {
