--- a/Lv1/약수의개수와덧셈.ipynb
+++ b/Lv1/약수의개수와덧셈.ipynb
@@ -46,9 +46,47 @@
     "        else:\n",
     "                answer -= num\n",
     "            \n",
-    "    return answer\n",
-    "\n",
-    "solution(13, 17)"
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 내 풀이2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(left, right):\n",
+    "    answer = 0\n",
+    "    for num in range(left, right+1): # 범위 내 숫자들 반복문\n",
+    "        cnt = 2 #(1, num)\n",
+    "        for i in range(2, num//2+1):\n",
+    "            if num % i == 0:\n",
+    "                if num / i == i: \n",
+    "                    cnt += 1 # 제곱수\n",
+    "                else:\n",
+    "                    cnt += 2 # 짝이 있으니까\n",
+    "                \n",
+    "        if cnt % 2 == 0: # 약수 개수 홀/짝\n",
+    "                answer += num\n",
+    "        else:\n",
+    "                answer -= num\n",
+    "            \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 참고 풀이\n",
+    "링크: "
    ]
   },
   {
