--- a/Lv2/주차요금계산.ipynb
+++ b/Lv2/주차요금계산.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[14600, 34400, 5000]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,8 +253,8 @@
     "        fee = fees[1]\n",
     "        minutes -= fees[0]\n",
     "        if minutes > 0:\n",
-    "            if minutes % fees[2] != 0:\n",
-    "                fee += (minutes // fees[2]+1) * fees[3]\n",
+    "            if minutes % fees[2] != 0: # 주차비 올림 계산\n",
+    "                fee += (minutes // fees[2]+1) * fees[3] # \n",
     "            else:\n",
     "                fee += (minutes // fees[2]) * fees[3]\n",
     "        return fee\n",
@@ -263,7 +263,7 @@
     "        time, num, status = r.split()\n",
     "        if status == 'IN': # 입차기록\n",
     "            in_rec[num] = time\n",
-    "        else:\n",
+    "        else: # 출차 시\n",
     "            if num not in use_rec.keys():\n",
     "                use_rec[num] = t_to_m(time) - t_to_m(in_rec[num]) # 이용시간 계산\n",
     "            else:\n",
@@ -280,9 +280,8 @@
     "    # 누적 이용 시간으로 요금 계산            \n",
     "    nums = sorted(use_rec.keys())\n",
     "    answer = []\n",
-    "    for num in nums:\n",
+    "    for num in nums: # 정렬순으로 계산\n",
     "        answer.append(fee_cal(use_rec[num], fees))\n",
-    "    \n",
     "    \n",
     "    return answer\n",
     "\n",
