--- a/Lv1/실패율.ipynb
+++ b/Lv1/실패율.ipynb
@@ -151,7 +151,7 @@
    "source": [
     "* 시간 초과 문제 해결 1 - 실패\n",
     "\n",
-    "    ```다음 연산에 쓰이지 않을 값 제거```"
+    "    다음 연산에 쓰이지 않을 값 제거"
    ]
   },
   {
@@ -202,7 +202,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 시간 초과 문제 해결 2"
+    "* 중복값 제거\n",
+    "\n",
+    "```\n",
+    "remove()는 중복값을 제거해주지 않고 1개의 요소만 제거해 준다\n",
+    "string = {a,b}\n",
+    "list_ = [i for i in list_ if i not in string]"
    ]
   },
   {
@@ -210,7 +215,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(N, stages):\n",
+    "    nums = [i+1 for i in range(N)]\n",
+    "    per = [0 for i in range(N)]\n",
+    "    for i in nums:# 1~\n",
+    "        loser = stages.count(i) # 해당 스테이지에 도전중인 유저 1\n",
+    "        winner = len(stages) # 해당 스테이지를 도전한 유저 8\n",
+    "        print(stages)\n",
+    "        # winner == 0 loser != 0 실패율 1\n",
+    "        if winner == 0 and loser != 0: # \n",
+    "            per[i-1] = 1\n",
+    "        # loser == 0 실패율 0\n",
+    "        elif loser == 0:\n",
+    "            pass\n",
+    "        else:\n",
+    "            per[i-1] = loser/winner # 실패율 계산\n",
+    "        if loser!= 0:\n",
+    "            remove = i\n",
+    "            stages = [i for i in stages if i != remove]\n",
+    "    failure = [(nums[i], per[i]) for i in range(N)]    \n",
+    "    failure.sort(key = lambda x: (-x[1], x[0])) # 내림차순, 오름차순\n",
+    "    \n",
+    "    answer = [(f[0]) for f in failure]\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 시간 초과 해결 2 - 성공\n",
+    "\n",
+    "    딕셔너리 활용하여 count()함수를 반복문에서 사용하지 않음으로 시간 초과 해결"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(N, stages):\n",
+    "    counts = {i: stages.count(i+1) for i in range(N+1)} # count는 한번만 실행해서 딕셔너리 만들어 두기\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        loser = counts[i]\n",
+    "        winner = 0\n",
+    "        for j in range(i, N+1):\n",
+    "            winner += counts[j]\n",
+    "        if loser == 0:\n",
+    "            counts[i] = 0 # 도달한 사람도, 성공한 사람도 없는 스테이지 # 도달한 사람이 모두 성공한 스테이지\n",
+    "        elif winner == 0 and loser != 0: # 도달했지만 성공한 사람이 없는 스테이지\n",
+    "            counts[i] = 1\n",
+    "        else:\n",
+    "            counts[i] = loser / winner # 연산 끝난 스테이지는 실패율로 값 변경\n",
+    "    del counts[N]\n",
+    "    result = list(counts.items())\n",
+    "    result.sort(key=lambda x: (-x[1], x[0])) # 실패율 내림차순, 스테이지 오름차순 정렬\n",
+    "    answer = [r[0]+1 for r in result]\n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
@@ -229,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.undefined"
   }
  },
  "nbformat": 4,
